--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
       </div>
       <svg class="gradient" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="5" d="M0,288L21.8,245.3C43.6,203,87,117,131,85.3C174.5,53,218,75,262,101.3C305.5,128,349,160,393,160C436.4,160,480,128,524,133.3C567.3,139,611,181,655,213.3C698.2,245,742,267,785,240C829.1,213,873,139,916,106.7C960,75,1004,85,1047,90.7C1090.9,96,1135,96,1178,106.7C1221.8,117,1265,139,1309,128C1352.7,117,1396,75,1418,53.3L1440,32L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"></path></svg>
     </header>
+    <section class="companies">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2 activities"><img src="img/activity1.png" class="img-fluid"></div>
+          <div class="col-md-2 activities"><img src="img/activity2.png" class="img-fluid"></div>
+          <div class="col-md-2 activities"><img src="img/activity3.png" class="img-fluid"></div>
+          <div class="col-md-2 activities"><img src="img/activity4.png" class="img-fluid"></div>
+          <div class="col-md-2 activities"><img src="img/activity5.png" class="img-fluid"></div>
+          <div class="col-md-2 activities"><img src="img/activity6.png" class="img-fluid"></div>
+        </div>
+      </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   </body>
 </html>
