--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="#"><i class="fa fa-heart-o" aria-hidden="true"></i>Home</a>
+              <a class="nav-link active" href="index.html"><i class="fa fa-heart-o" aria-hidden="true"></i>Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fa fa-heart-o" aria-hidden="true"></i>Images</a>
+              <a class="nav-link" href="images.html"><i class="fa fa-heart-o" aria-hidden="true"></i>Images</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"><i class="fa fa-heart-o" aria-hidden="true"></i>More</a>
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col-md 6">
             <h1>About Me</h1>
-            <p>Here is a little info about me. Look below to read a little  about my life, or click the "images" tab to see some pictures.</p>
+            <p>Here is a little info about me. Click on each image below to read a little about my hobbies, or click the "images" tab to see some pictures.</p>
           </div>
           <div class="col-md 6"></div>
         </div>
@@ -53,10 +53,10 @@
         <div class="row">
           <div class="col-md-2 activities"><img src="img/activity1.png" class="img-fluid"></div>
           <div class="col-md-2 activities"><img src="img/activity2.png" class="img-fluid"></div>
-          <div class="col-md-2 activities"><img src="img/activity3.png" class="img-fluid"></div>
+          <div class="col-md-2 activities"><img src="img/activity3last.gif" class="img-fluid"></div>
           <div class="col-md-2 activities"><img src="img/activity4.png" class="img-fluid"></div>
           <div class="col-md-2 activities"><img src="img/activity5.png" class="img-fluid"></div>
-          <div class="col-md-2 activities"><img src="img/activity6.png" class="img-fluid"></div>
+          <div class="col-md-2 activities"><img src="img/activity6new.png" class="img-fluid"></div>
         </div>
       </div>
     </section>
