--- a/images.html
+++ b/images.html
@@ -50,7 +50,8 @@
       </header>
     <div class="container">
       <div class="row">
-        <div class="col-md-6"><img src="bella1.jpg"></div>
+        <div class="col-md-6"><img class="imagesheight" src="img/bella1.jpg"></div>
+        <div class="col-md-6"><img class="imageswidth" src="img/bella2.jpg"></div>
       </div>
     </div>
   </body>
