--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
       </div>
     </section>
     <!--Second Section-->
-  <section class="feature gradient">
-    <svg class="gradient" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L30,170.7C60,181,120,203,180,176C240,149,300,75,360,37.3C420,0,480,0,540,37.3C600,75,660,149,720,186.7C780,224,840,224,900,186.7C960,149,1020,75,1080,85.3C1140,96,1200,192,1260,202.7C1320,213,1380,139,1410,101.3L1440,64L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"></path></svg>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6"><img class="img-fluid" src="img/activity1.png"></div>
-        <div class="col-md-6">
-          <h1 class="headingtext">Reading</h1>
-          <p class="bodytext"></p>
+    <section class="images">
+      <div class="container text-center">
+        <div class="row g-5">
+          <div class="col-md 2"><img src="./images/IMG_4187.png" alt="" class="img-fluid"></div>
+          <div class="col-md 2"><img src="./images/IMG_5591.png" alt="" class="img-fluid"></div>
+          <div class="col-md 2"><img src="./images/IMG_4509.png" alt="" class="img-fluid"></div>
+          <div class="col-md 2"><img src="./images/IMG_4863.png" alt="" class="img-fluid"></div>
+          <div class="col-md 2"><img src="./images/IMG_5832.png" alt="" class="img-fluid"></div>
+          <div class="col-md 2"><img src="./images/IMG_4897.png" alt="" class="img-fluid"></div>
         </div>
-     </div>
-    </div>
-  </section>
+      </div>
+    </section>
     
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
