--- a/images.html
+++ b/images.html
@@ -12,47 +12,104 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Landing Page</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light py-5">
-        <div class="container">
-          <a class="navbar-brand" href="#"><img class="heart" src="img/shrooms1.gif"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" href="index.html"><i class="fa fa-heart-o" aria-hidden="true"></i>Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="images.html"><i class="fa fa-heart-o" aria-hidden="true"></i>Images</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa fa-heart-o" aria-hidden="true"></i>More</a>
-              </li>
-              </ul>
-          </div>
-        </div>
-      </nav>
-      <header class="page-header gradient">
-        <div class="container">
-          <div class="row">
-            <div class="col-md 6">
-              <h1 class="headingtext">Pictures!</h1>
-              <p>Here are some pictures of me and some other things that make me happy :)</p>
-            </div>
-            <div class="col-md 6"></div>
-          </div>
-        </div>
-        <svg class="gradient" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="5" d="M0,288L21.8,245.3C43.6,203,87,117,131,85.3C174.5,53,218,75,262,101.3C305.5,128,349,160,393,160C436.4,160,480,128,524,133.3C567.3,139,611,181,655,213.3C698.2,245,742,267,785,240C829.1,213,873,139,916,106.7C960,75,1004,85,1047,90.7C1090.9,96,1135,96,1178,106.7C1221.8,117,1265,139,1309,128C1352.7,117,1396,75,1418,53.3L1440,32L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"></path></svg>
-      </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
-      <div class="row">
-        <div class="col-md-6"><img class="imagesheight" src="img/bella1.jpg"></div>
-        <div class="col-md-6"><img class="imageswidth" src="img/bella2.jpg"></div>
+      <a class="navbar-brand" href="#"><img src="./images/IMG_5832.png" alt=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html"><i class="fa fa-music" aria-hidden="true"></i>Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="images.html"><i class="fa fa-music" aria-hidden="true"></i>Images</a>
+          </li>
+        </ul>
       </div>
     </div>
+  </nav>
+    <header class="page-header gradient">
+      <div class="container pt-3">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-md-5">
+            <h1 class="headingtext"><i class="fa fa-music" aria-hidden="true"></i>Images</h1>
+            <p>Look below to learn about/see what makes me happy!</p>
+          </div>
+        </div>
+      </div>
+  
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#fff" fill-opacity="1"
+          d="M0,32L40,26.7C80,21,160,11,240,10.7C320,11,400,21,480,58.7C560,96,640,160,720,154.7C800,149,880,75,960,64C1040,53,1120,107,1200,122.7C1280,139,1360,117,1400,106.7L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
+        </path>
+      </svg>
+    </header>
+    <section class="icons">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md-4"><div class="icon gradient mb-4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
+            <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
+          </svg></div>
+          <h3>My art</h3>
+          <p>This is how I express myself and occupy my mind</p>
+          </div>
+          <div class="col-md-4"><div class="icon gradient mb-4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
+            <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
+          </svg></div>
+          <h3>My loved ones</h3>
+          <p>My pets, family, and friends all help me be my best self</p>
+          </div>
+          <div class="col-md-4"><div class="icon gradient mb-4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
+            <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
+          </svg></div>
+          <h3>My acheivements</h3>
+          <p>This is how I build my self esteem and drive</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="services gradient">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,128L48,128C96,128,192,128,288,122.7C384,117,480,107,576,128C672,149,768,203,864,218.7C960,235,1056,213,1152,186.7C1248,160,1344,128,1392,112L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+      <div class="container">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-md-5"><h1 class="headingtext">Me</h1></div>
+          <div class="col-md-5"><img class="imagesize" src="img/bella1.jpg"></div>
+          <div class="col-md-5"><img class="imagesize" src="img/cameron (2).jpg"></div>
+          <div class="col-md-5"><h1 class="headingtext">My girlfriend</h1></div>
+          <div class="col-md-5"><h1 class="headingtext">Some of my art</h1></div>
+          <div class="col-md-5"><img class="imagesize" src="img/myart.jpg"><img class="imagesize" src="img/bear.jpg"></div>
+          
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+    </section>
+    <section class="services gradient">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,128L48,128C96,128,192,128,288,122.7C384,117,480,107,576,128C672,149,768,203,864,218.7C960,235,1056,213,1152,186.7C1248,160,1344,128,1392,112L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+      <div class="container">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-md-5"><h1 class="headingtext">My dog, Monie</h1></div>
+          <div class="col-md-5"><img class="imagesize" src="img/monie.jpg"></div>
+          <div class="col-md-5"><img class="wideimages" src="img/binky.jpg"></div>
+          <div class="col-md-5"><h1 class="headingtext">One of my cats, Minky</h1></div>
+          <div class="col-md-5"><h1 class="headingtext">Me and my girlfriend together</h1></div>
+          <div class="col-md-5"><img class="wideimages" src="img/cai&bella.jpg"></div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+    </section>
+    <section>
+      <footer class="gradient">
+        <div class="container-fluid text-center">
+          <span>Made using: <a href="https://mdbootstrap.com">MDBootstrap.com</a></span>
+        </div>
+      </footer>
+    </section>
   </body>
-</html>
+  </html>
