--- a/index.html
+++ b/index.html
@@ -12,69 +12,254 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Landing Page</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light py-5">
-      <div class="container">
-        <a class="navbar-brand" href="#"><img class="heart" src="img/shrooms1.gif"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" href="index.html"><i class="fa fa-heart-o" aria-hidden="true"></i>Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="images.html"><i class="fa fa-heart-o" aria-hidden="true"></i>Images</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fa fa-heart-o" aria-hidden="true"></i>More</a>
-            </li>
-            </ul>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#"><img src="./images/IMG_5832.png" alt=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html"><i class="fa fa-music" aria-hidden="true"></i>Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="images.html"><i class="fa fa-music" aria-hidden="true"></i>Images</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  <header class="page-header gradient">
+    <div class="container pt-3">
+      <div class="row align-items-center justify-content-center">
+        <div class="col-md-5">
+          <h1 class="headingtext"><i class="fa fa-music" aria-hidden="true"></i>About Me</h1>
+          <p>Look below to learn about my hobbies, or click the "Images" tab to see pictures!</p>
         </div>
       </div>
-    </nav>
-    <header class="page-header gradient">
-      <div class="container pt-5">
-        <div class="row align-items-center justify-content-center">
-          <div class="col-md 6">
-            <h1>About Me</h1>
-            <p>Here is a little info about me. Click on each image below to read a little about my hobbies, or click the "images" tab to see some pictures.</p>
-          </div>
-        </div>
-      </div>
-      <svg class="gradient" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="5" d="M0,288L21.8,245.3C43.6,203,87,117,131,85.3C174.5,53,218,75,262,101.3C305.5,128,349,160,393,160C436.4,160,480,128,524,133.3C567.3,139,611,181,655,213.3C698.2,245,742,267,785,240C829.1,213,873,139,916,106.7C960,75,1004,85,1047,90.7C1090.9,96,1135,96,1178,106.7C1221.8,117,1265,139,1309,128C1352.7,117,1396,75,1418,53.3L1440,32L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"></path></svg>
-    </header>
-    <!--First Section-->
+    </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,32L40,26.7C80,21,160,11,240,10.7C320,11,400,21,480,58.7C560,96,640,160,720,154.7C800,149,880,75,960,64C1040,53,1120,107,1200,122.7C1280,139,1360,117,1400,106.7L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
+      </path>
+    </svg>
+  </header>
+
+  <section class="feature gradient">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+      </path>
+    </svg>
     <section class="companies">
       <div class="container">
         <div class="row">
-          <div class="col-md-2 activities"><img src="img/activity1.png" class="img-fluid"></div>
-          <div class="col-md-2 activities"><img src="img/activity2.png" class="img-fluid"></div>
-          <div class="col-md-2 activities"><img src="img/activity3last.gif" class="img-fluid"></div>
-          <div class="col-md-2 activities"><img src="img/activity4.png" class="img-fluid"></div>
-          <div class="col-md-2 activities"><img src="img/activity5.png" class="img-fluid"></div>
-          <div class="col-md-2 activities"><img src="img/activity6new.png" class="img-fluid"></div>
+          <div class="col-md 2"><img src="img/activity1.png" class="img-fluid"></div>
+          <div class="col-md 2"><img src="img/activity2.png"  class="img-fluid"></div>
+          <div class="col-md 2"><img src="img/activity3last.gif"  class="img-fluid"></div>
+          <div class="col-md 2"><img src="img/activity4.png"  class="img-fluid"></div>
+          <div class="col-md 2"><img src="img/activity5.png"  class="img-fluid"></div>
+          <div class="col-md 2"><img src="img/activity6new.png"  class="img-fluid"></div>
         </div>
       </div>
-    </section>
-    <!--Second Section-->
-    <section class="images">
-      <div class="container text-center">
-        <div class="row g-5">
-          <div class="col-md 2"><img src="./images/IMG_4187.png" alt="" class="img-fluid"></div>
-          <div class="col-md 2"><img src="./images/IMG_5591.png" alt="" class="img-fluid"></div>
-          <div class="col-md 2"><img src="./images/IMG_4509.png" alt="" class="img-fluid"></div>
-          <div class="col-md 2"><img src="./images/IMG_4863.png" alt="" class="img-fluid"></div>
-          <div class="col-md 2"><img src="./images/IMG_5832.png" alt="" class="img-fluid"></div>
-          <div class="col-md 2"><img src="./images/IMG_4897.png" alt="" class="img-fluid"></div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
+    </svg>
+  </section>
+  
+  <section>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+      </path>
+    </svg>
+    <div class="container pt-3">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="img-fluid iconsize" src="img/activity1.png">
         </div>
       </div>
-    </section>
-    
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    </div>
+    <div>
+      <div class="col-md-6 justify-content-center">
+        <h1 class="headingtext"><i class="fa fa-music" aria-hidden="true"></i>Reading</h1>
+        <p class="bodytext">Reading is one of my favorite passtimes. I read on topics that i find interesting, but I also read things that help me gain insight on myself and the world.
+          Some of my favorite books are on topics like art history, psychology, and homeopathy.
+        </p>
+      </div>
+    </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
+    </svg>
+  </section>
+ 
+  <section>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+      </path>
+    </svg>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="img-fluid iconsize" src="img/activity2.png">
+        </div>
+      </div>
+    </div>
+    <div class="justify-content-end">
+      <div class="col-md-6">
+        <h1 class="headingtext"><i class="fa fa-music" aria-hidden="true"></i>Music</h1>
+        <p class="bodytext">Music is a very important passion of mine. Since I was old enough to know what I do and don't like, I have has a taste for all kinds of
+          music as well as an ear for sound. I have always been able to listen to a peice and pick out the notes on any kind of instrument, which I think is pretty cool.
+          My favorite genre of music is electronic, but I have more specific favorite subgenres like experimental and dark ambient. Click on the button below to view a smaple playlist of my favorites. 
+        </p>
+      </div>
+    </div>
+    <a href="https://youtube.com/playlist?list=PLpokqJ74CAX2eWArjqH-4IEIq9EZeZtXm" class="btn btn-primary btn-primary:hover" role="button">Music!</a>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
+    </svg>
+  </section>
+
+  <section>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+      </path>
+    </svg>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="img-fluid iconsize" src="img/activity3last.gif">
+        </div>
+      </div>
+    </div>
+    <div class="justify-content-end">
+      <div class="col-md-6">
+        <h1 class="headingtext"><i class="fa fa-music" aria-hidden="true"></i>Gaming</h1>
+        <p class="bodytext">While I try not to spend so much time on this, gaming is also a big interest of mine. Some of my favorite video games are the Elder Scrolls, Minecraft, Apex Legends, and Silent Hill.
+        </p>
+      </div>
+    </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
+    </svg>
+  </section>
+ 
+  <section>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+      </path>
+    </svg>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="img-fluid iconsize" src="img/activity4.png">
+        </div>
+      </div>
+    </div>
+    <div class="justify-content-end">
+      <div class="col-md-6">
+        <h1 class="headingtext"><i class="fa fa-music" aria-hidden="true"></i>Learning</h1>
+        <p class="bodytext"> Both in school and in my freetime, I like to make it a point to invest some time into learning about the things that either interest me or that i can benefit from. 
+        I enjoy learning about the natural world, psychology, religion, art and art history, and much more.
+        </p>
+      </div>
+    </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
+    </svg>
+  </section>
+  <section>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+      </path>
+    </svg>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="img-fluid iconsize" src="img/activity5.png">
+        </div>
+      </div>
+    </div>
+    <div class="justify-content-end">
+      <div class="col-md-6">
+        <h1 class="headingtext"><i class="fa fa-music" aria-hidden="true"></i>Art</h1>
+        <p class="bodytext">Art is the hobby that I invest the most time and energy into. I work with a wide range of mediums and styles, and I also dedicate much time 
+          to research and learning the technicalities of art so that I can improve. I look to the artworks of many of my favorite artists for inspiration and reference as well.
+          Most of my favorite artists are impressionists, but I do follow a few abstract artists such as Oliver DeSagazan and Jiri Barta.
+        </p>
+      </div>
+    </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
+    </svg>
+  </section>
+  <section>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+      </path>
+    </svg>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="img-fluid iconsize" src="img/activity6new.png">
+        </div>
+      </div>
+    </div>
+    <div class="justify-content-end">
+      <div class="col-md-6">
+        <h1 class="headingtext"><i class="fa fa-music" aria-hidden="true"></i>School</h1>
+        <p class="bodytext">Although it sometimes wears me down, school is also one of my hobbies. I use school primarily as a way to push myself and test 
+          my limits and abilities. It is through my performance in school that I can judge my growth in certain areas, and because I apply myself as much as I can the results after
+          each year are very satisfying.
+        </p>
+      </div>
+    </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,192L48,192C96,192,192,192,288,160C384,128,480,64,576,80C672,96,768,192,864,218.7C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
+    </svg>
+  </section>
+  <section>
+    <footer class="gradient">
+      <div class="container-fluid text-center">
+        <span>Made using: <a href="https://mdbootstrap.com">MDBootstrap.com</a></span>
+      </div>
+    </footer>
+  </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+  </script>
   </body>
-</html>
+  </html>
